third_party/move/move-compiler-v2/tests/lambda/inline-parity/nested_lambda.lambda.exp
// -- Model dump before bytecode pipeline
module 0x42::Test {
    public fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun test(): u64 {
        Test::apply(closure#0Test::test$lambda$1(), 1, Test::apply(closure#0Test::test$lambda$2(), 2, 1))
    }
    private fun test$lambda$1(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun test$lambda$2(x: u64,y: u64): u64 {
        Mul<u64>(x, y)
    }
} // end 0x42::Test

// -- Sourcified model before bytecode pipeline
module 0x42::Test {
    public fun apply(f: |(u64, u64)|u64, x: u64, y: u64): u64 {
        f(x, y)
    }
    public fun test(): u64 {
        apply(|(arg0,arg1)| test$lambda$1(arg0, arg1), 1, apply(|(arg0,arg1)| test$lambda$2(arg0, arg1), 2, 1))
    }
    fun test$lambda$1(x: u64, y: u64): u64 {
        x + y
    }
    fun test$lambda$2(x: u64, y: u64): u64 {
        x * y
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/nested_lambda.move:5:9
  │
5 │         f(x, y)
  │         ^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
  ┌─ tests/lambda/inline-parity/nested_lambda.move:9:15
  │
9 │         apply(|x, y| x + y, 1, apply(|x, y| x * y, 2, 1))
  │               ^^^^^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
  ┌─ tests/lambda/inline-parity/nested_lambda.move:9:38
  │
9 │         apply(|x, y| x + y, 1, apply(|x, y| x * y, 2, 1))
  │                                      ^^^^^^^^^^^^
